--- a/Public/adminlogin.html
+++ b/Public/adminlogin.html
@@ -18,7 +18,7 @@
             <h1>Welcome back, Admin</h1>
             <p>Sign in with your email</p>
           </div>
-          <form action="/submit" method="POST" id="login-form">
+          <form  id="login-form">
             <div class="input-div">
                 <label for="username">Username</label>
                 <input type="text" id="username" name="username" />
@@ -86,6 +86,79 @@
                 alert("Login successful (simulated)!");
             }, 3000); // Adjust the timeout as needed
         });
+
+        
+      // Handle form submission and login API call
+      document
+        .getElementById("login-form")
+        .addEventListener("submit", async function (event) {
+          event.preventDefault(); // Prevent default form submission behavior
+
+          const username = document.getElementById("username").value;
+          const password = document.getElementById("password-input").value;
+
+          // Validate the inputs before making the API call
+          if (!username || !password) {
+            alert("Please enter both username and password.");
+            return; // Stop further execution
+          }
+
+          // Call the adminLogin function with the entered username and password
+          await adminLogin(username, password);
+        });
+
+        async function adminLogin(username, password) {
+        const apiUrl = "https://unlimitedfunds.onrender.com/api/v1/admin/signin";
+        document.getElementById("login-button").innerHTML = "Please wait...";
+        document.getElementById("login-button").disabled = true;
+        const loginData = {
+          userName: username, // Send the entered username
+          password: password, // Send the entered password
+        };
+
+        try {
+          const response = await fetch(apiUrl, {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json",
+            },
+            body: JSON.stringify(loginData),
+          });
+          console.log(response.status);
+          const data = await response.json();
+          console.log(data);
+          if (!response.ok) {
+            throw new Error("Login failed");
+          }
+
+          console.log("Login successful:", data.data.token);
+
+          // Optionally store the token or user info in localStorage
+          localStorage.setItem("authToken", data.data.token); // Example of storing a token
+
+          // Redirect to the admin dashboard (optional)
+          window.location.href = "/admin.html"; // Redirect after successful login
+
+          return data;
+        } catch (error) {
+          if (
+            error.name === "TypeError" &&
+            error.message === "Failed to fetch"
+          ) {
+            // This error is usually caused by network issues
+            console.error(
+              "Network error: Failed to fetch. Please check your internet connection."
+            );
+            alert("Network error: Please check your internet connection.");
+          } else {
+            console.error("Error during login:", error);
+            alert(`${error} | Login failed. Please check your credentials.`);
+          }
+        } finally {
+          document.getElementById("login-button").innerHTML = "Login";
+          document.getElementById("login-button").disabled = false;
+        }
+      }
     </script>
   </body>
 </html>
