--- a/Public/dashboard.html
+++ b/Public/dashboard.html
@@ -454,16 +454,16 @@
           <div class="title">
             <div class="newupdate" style="position: relative;">
               <div class="h1-box">
-                <h2>Hello, James</h3>
+                <h2 id="greetingUser">Hello, James</h3>
                 <p>This is your financial report</p>
               </div>
               <div class="boxes">
                 <div class="box1">
                   <p>My balance</p>
-                  <h3>$282,626.36</h3>
+                  <h3 id="accountBalance">$282,626.36</h3>
                   <div class="account-num">
-                    <p>0082 2618 2783 1129</p>
-                    <img src="image/Frame 161.svg" alt="" />
+                    <p id="accounNumber">0082 2618 2783 1129</p>
+                    <button class="copyAccount"><img src="image/Frame 161.svg" alt="" /></button>
                   </div>
                   <div class="transaction-btn">
                     <a class="send-btn" href="">Send Money</a>
@@ -480,9 +480,9 @@
                   <div class="box2">
                     <div>
                       <img src="image/Bill-2--Streamline-Core.svg" alt="" />
-                      <p>Savings Account</p>
+                      <p class="accountType">Savings Account</p>
                     </div>
-                    <h3>$126,263.00</h3>
+                    <h3 id="balance">$126,263.00</h3>
                   </div>
                 </div>
               </div>
@@ -558,7 +558,7 @@
                       <img src="image/arrow-up3.svg" alt="" />
                       <div>
                         <p>From</p>
-                        <p>0082261827831129</p>
+                        <p class="">0082261827831129</p>
                       </div>
                     </div>
                     <div class="to">
@@ -651,44 +651,44 @@
                 <div id="title-button"><img src="image/x-circle.svg" alt=""></div>
                 <div class="profile-details">
                   <div class="picture-container">
-                    <h1>JT</h1>
+                    <img id="profilePicture" class="profilePics" src="" alt="">
                   </div>
                   <div class="details-container">
                     <div class="details">
                       <p>Account Type</p>
-                      <div class="detail-box"><p>Savings Account</p></div>
+                      <div class="detail-box"><p class="accountType">Savings Account</p></div>
                     </div>
                     <div class="details">
-                      <p>Account name</p>
-                      <div class="detail-box"><p>James Tyler John</p></div>
+                      <p >Account name</p>
+                      <div class="detail-box"><p class="fullnames">James Tyler John</p></div>
                     </div>
                     <div class="details">
                       <p>Account Number</p>
-                      <div class="detail-box"><p>0082261827831129</p></div>
+                      <div class="detail-box"><p class="accountNumber">0082261827831129</p></div>
                     </div>
                     <div class="details">
-                      <p>Email</p>
-                      <div class="detail-box"><p>@Jamestyler.com</p></div>
+                      <p >Email</p>
+                      <div class="detail-box"><p class="emailaddress">@Jamestyler.com</p></div>
                     </div>
                     <div class="details">
                       <p>User name</p>
-                      <div class="detail-box"><p>James Tyler</p></div>
+                      <div class="detail-box"><p class="username">James Tyler</p></div>
                     </div>
                     <div class="details">
                       <p>Address</p>
-                      <div class="detail-box detail-box2"><p>In fringilla sapien velit adipiscing senectus in. yttgufftytytxrtxcxdxdrzree gdtrdtrdtr tyf ftyftyft fytyft</p></div>
+                      <div class="detail-box detail-box2"><p class="useraddress">In fringilla sapien velit adipiscing senectus in. yttgufftytytxrtxcxdxdrzree gdtrdtrdtr tyf ftyftyft fytyft</p></div>
                     </div>
                     <div class="details">
                       <p>Country</p>
-                      <div class="detail-box"><p>USA</p></div>
+                      <div class="detail-box"><p class="CountryResidence">USA</p></div>
                     </div>
                     <div class="details">
                       <p>State</p>
-                      <div class="detail-box"><p>New York</p></div>
+                      <div class="detail-box"><p class="stateData">New York</p></div>
                     </div>
                     <div class="details">
-                      <p>DOB</p>
-                      <div class="detail-box"><p>01/12/1234</p></div>
+                      <p >DOB</p>
+                      <div class="detail-box"><p class="dateObirt">01/12/1234</p></div>
                     </div>
                   </div>
                 </div>
@@ -711,11 +711,11 @@
                   <img src="image/chevron-down.svg" alt="">
                 </button>
                 <div class="picture-container">
-                  <h1>JT</h1>
+                  <img class="profileImage profilePics" src="" alt="">
                 </div>
                 <div class="name-id">
-                    <h3>James tyler</h3>
-                    <p>@jamestyler</p>
+                    <h3 class="names">James tyler</h3>
+                    <p class="username">@jamestyler</p>
                 </div>
               </div>
               <div class="box-relative">
@@ -724,9 +724,9 @@
                         <p>UnlimitedSfunds Bank Premium</p>
                         <img src="image/Chip--Streamline-Mynaui.svg.svg" alt="">
                     </div>
-                    <p>0082 2618 2783 1129</p>
+                    <p class="accountNumber">0082 2618 2783 1129</p>
                     <div class="innerbox1">
-                        <p>James Tyler</p>
+                        <p class="names">James Tyler</p>
                         <img class="img2" src="image/Group 4495.svg" alt="">
                     </div>
                 </div>
@@ -735,9 +735,9 @@
                         <p>UnlimitedSfunds Bank Premium</p>
                         <img src="image/Chip--Streamline-Mynaui.svg.svg" alt="">
                     </div>
-                    <p>0082 2618 2783 1129</p>
+                    <p class="accountNumber">0082 2618 2783 1129</p>
                     <div class="innerbox1">
-                        <p>James Tyler</p>
+                        <p class="names">James Tyler</p>
                         <img class="img2" src="image/Group 4495.svg" alt="">
                     </div>
                 </div>
